--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,10 +4,10 @@
         <p>Nombre app</p>
     </div>
     <nav class="nav">
-        <a href="/inicio">Inicio</a>
-        <a href="/quien-soy">Quien Soy</a>
-        <a href="/login">Login</a>
-        <a href="/register">Register</a>
+        <a routerLink="/inicio">Inicio</a>
+        <a routerLink="/quien-soy">Quien Soy</a>
+        <a routerLink="/login">Login</a>
+        <a routerLink="/register">Register</a>
     </nav>
 </header>
 <router-outlet/>
