--- a/src/app/pages/quien-soy/quien-soy.html
+++ b/src/app/pages/quien-soy/quien-soy.html
@@ -1,6 +1,6 @@
-<div *ngIf="data">
+<div class="main" *ngIf="data">
     <p>Usuario GitHub: {{ data.login }}</p>
     <img [src]="data.avatar_url" alt="Avatar de {{ data.login }}" />
-    <p>Link Github: {{ data.url }}</p>
-    <p>Elegi este proyecto porque: Aca diria el porque pero no hay por que</p>
+    <p class="text">Link Github: <a>{{ data.url }}</a></p>
+    <p class="text">Elegi este proyecto porque: Aca diria el porque pero no hay por que</p>
 </div>
