--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,2 @@
-<header class="header">
-    <div class="logo">
-        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"/>
-        <p>Nombre app</p>
-    </div>
-    <nav class="nav">
-        <a routerLink="/inicio">Inicio</a>
-        <a routerLink="/quien-soy">Quien Soy</a>
-        <a routerLink="/login">Login</a>
-        <a routerLink="/register">Register</a>
-    </nav>
-</header>
+<app-navbar/>
 <router-outlet/>
