--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,1 +1,14 @@
-<p>register works!</p>
+<form>
+    <h1>Registrarse</h1>
+    <p>Email</p>
+    <input placeholder="Email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"/>
+    <p>Nombre</p>
+    <input placeholder="Nombre" [(ngModel)]="nombre" [ngModelOptions]="{standalone: true}"/>
+    <p>Apellido</p>
+    <input placeholder="Apellido" [(ngModel)]="apellido" [ngModelOptions]="{standalone: true}"/>
+    <p>Edad</p>
+    <input placeholder="Edad" type="number" [(ngModel)]="edad" [ngModelOptions]="{standalone: true}"/>
+    <p>Contraseña</p>
+    <input placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
+    <button (click)="comprobarDatos()">Ingresar</button>
+</form>
