--- a/src/app/pages/bienvenida/bienvenida.css
+++ b/src/app/pages/bienvenida/bienvenida.css
@@ -24,3 +24,52 @@
     text-align: center;
     text-decoration: none;
 }
+
+.contenedor{
+    width: 100vw;
+    height: 80vh;
+    display: grid;
+    grid-template-columns: repeat(2, 0.2fr); 
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    width: 18vw;
+    height: 50vh;
+    cursor: pointer;
+}
+
+.card img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.card p{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: white;
+    opacity: 0;
+    transition: 0.3s;
+    font-size: 2vw;
+    font-weight:600;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card:hover img{
+    filter: brightness(0.2);
+}
+
+.card:hover p{
+    opacity: 1;
+}
