--- a/src/app/pages/bienvenida/bienvenida.css
+++ b/src/app/pages/bienvenida/bienvenida.css
@@ -1,6 +1,6 @@
 .main{
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +27,7 @@
 
 .contenedor{
     width: 100vw;
-    height: 80vh;
+    height: 60vh;
     display: grid;
     grid-template-columns: repeat(2, 0.2fr); 
     justify-content: center;
@@ -72,4 +72,30 @@
 
 .card:hover p{
     opacity: 1;
+}
+
+.contenedor-chat{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(176, 66, 204);
+    width: fit-content;
+    height: 88vh;
+    top: 12vh;
+    border-radius: 5px;
+}
+
+.mensajes{
+    background-color: white;
+    width: 20vw;
+    height: 80vh;
+    margin: 1vw;
+    border-radius: 5px;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1vw;
 }
