--- a/src/app/pages/bienvenida/bienvenida.html
+++ b/src/app/pages/bienvenida/bienvenida.html
@@ -14,4 +14,13 @@
             <p>Mayor o Menor</p>
         </div>
     </div>
+    <div class="contenedor-chat">
+        <div class="mensajes">
+
+        </div>
+        <form>
+            <input type="text" placeholder="Escribe tu mensaje..." />
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
 }
