--- a/src/app/components/modal/modal/modal.css
+++ b/src/app/components/modal/modal/modal.css
@@ -1,8 +1,9 @@
 .contenedor{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.74);
     width: 100vw;
     height: 100vh;
     color: white;
