--- a/src/app/components/modal/modal/modal.html
+++ b/src/app/components/modal/modal/modal.html
@@ -2,6 +2,7 @@
 @if (modalAbierto) {
     <div class="contenedor">
         <h2>{{titulo}}</h2>
-        <button (click)="cerrarModal()" class="close-button">X</button>
+        <p>{{mensaje}}</p>
+        <button (click)="cerrarModal()" class="close-button">Cerrar</button>
     </div>
 }
