--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -8,4 +8,6 @@
     <input placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
     <button (click)="comprobarDatos()">Ingresar</button>
     <button (click)="accesoRapido(`jeronimovilar@outlook.com`, `jero2003`)">Acceso Rapido</button>
+    <button (click)="accesoRapido(`jeronimoevilar@outlook.com`, `jero2003`)">Acceso Rapido</button>
+    <button (click)="accesoRapido(`maniceroel@outlook.com`, `jero2003`)">Acceso Rapido</button>
 </form>
