--- a/src/app/juegos/ahorcado/ahorcado.css
+++ b/src/app/juegos/ahorcado/ahorcado.css
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+.header img{
+    height: 20vw;
+    width: auto;
+}
+
 .casilleros{
     display: flex;
     justify-content: center;
@@ -14,8 +19,42 @@
 }
 
 .teclado{
+    width: 20vw;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 0.4vw;
+}
+
+.tecla{
+    height: 2vw;
+    width: 2vw;
+    border: none;
+    background-color: rgb(176, 66, 204);
+    color: white;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.tecla:hover{
+    transform: scale(1.1);
+    background-color: rgb(99, 33, 116);
+}
+
+.contenedor-teclas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.numeros{
+    text-align: center;
+    font-size: 2vw;
+    font-weight: bold;
+    margin-top: 3vw;
+    display: flex;
+    gap: 5vw;
     justify-content: center;
     align-items: center;
 }
