--- a/src/app/components/modal/modal/modal.css
+++ b/src/app/components/modal/modal/modal.css
@@ -1,4 +1,6 @@
 .contenedor{
+    position: absolute;
+    top: 0px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -7,4 +9,5 @@
     width: 100vw;
     height: 100vh;
     color: white;
+    z-index: 10;
 }
