--- a/src/app/juegos/mayormenor/mayormenor.css
+++ b/src/app/juegos/mayormenor/mayormenor.css
@@ -1,4 +1,4 @@
-div{
+.contenedor{
     height: 70vh;
     width: 100vw;
     display: flex;
@@ -7,14 +7,19 @@ div{
     gap: 5vw;
 }
 
-div img{
+.contenedor img{
     height: 20vw;
     cursor: pointer;
     transition: 0.3s;
 }
 
-div img:hover{
+.contenedor img:hover{
     transform: scale(1.1);
+}
+
+.contenedor-botones{
+    display: flex;
+    gap: 2vw;
 }
 
 .secreto{
@@ -27,4 +32,60 @@ div img:hover{
     font-size: 2vw;
     font-weight: bold;
     margin-top: 2vw;
+    color: white;
+}
+
+.botones {
+    display: flex;
+    border: none;
+    justify-content: center;
+    align-items: center;
+	position: relative;
+	z-index: 0;
+	width: 10vw;
+	height: 5vh;
+	border-radius: 10px;
+	overflow: hidden;
+	padding: 2rem;
+    color: white;
+    transition: 0.3s;
+	
+	&::before {
+		content: '';
+		position: absolute;
+		z-index: -2;
+		left: -50%;
+		top: -50%;
+		width: 200%;
+		height: 500%;
+		background-color: #399953;
+		background-repeat: no-repeat;
+		background-size: 50% 50%, 50% 50%;
+		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+		background-image: linear-gradient(#399953, #399953), linear-gradient(#fbb300, #fbb300), linear-gradient(#d53e33, #d53e33), linear-gradient(#377af5, #377af5);
+		animation: rotate 4s linear infinite;
+	}
+	
+    	&::after {
+		content: '';
+		position: absolute;
+		z-index: -1;
+		left: 6px;
+		top: 6px;
+		width: calc(100% - 12px);
+		height: calc(100% - 12px);
+		background: #52238B;
+		border-radius: 5px;
+	}
+}
+
+
+.botones:hover{
+    transform: scale(1.2);
+}
+
+@keyframes rotate {
+	100% {
+		transform: rotate(1turn);
+	}
 }
