--- a/src/app/pages/quien-soy/quien-soy.css
+++ b/src/app/pages/quien-soy/quien-soy.css
@@ -1,19 +1,66 @@
 .main{
-    width: 35vw;
-    height: 80vh;
-    margin: auto;
-    margin-top: 5vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    background-color: rgb(176, 66, 204);
     color: white;
-    font-size: 1vw;
-    border-radius: 1vw;
+    gap: 5vw;
+    margin-top: 3vh;
 }
 
-.text{
-    margin-top: 2vh;
-    font-weight: bolder;
+.avatar{
+    height: 40vh;
+    width: 20vw;
+    border-radius: 5px;
+}
+
+.texto{
+    width: 40vw;
+}
+
+.texto p {
+    font-size: 1vw;
+}
+
+.texto{
+    font-size: 3vw;
+}
+
+.back{
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    height:55vh;
+    object-fit: cover;
+    filter: brightness(0.25);
+    top: 0;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-adicional{
+    flex-direction: column;
+    margin-top: 18vh;
+    border: 10px;
+    width: 25vw;
+    color: white;
+}
+
+.info-adicional h2{
+    text-align: center;
+}
+
+.info-adicional p{
+    padding-left: 1vw;
+}
+
+.pair{
+    background-color: #000000;
+}
+
+.container{
+    display: flex;
 }
