--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,3 +1,5 @@
+<app-modal (cambioModal)="cambioModal($event)" [mensaje]="mensaje" [titulo]="titulo" [modalAbierto]="modalAbierto"/>
+
 <form>
     <h1>Registrarse</h1>
     <p>Email</p>
