--- a/src/app/components/navbar/navbar/navbar.html
+++ b/src/app/components/navbar/navbar/navbar.html
@@ -7,6 +7,7 @@
         <div class="nav">
             <a routerLink="/">Inicio</a>
             <a routerLink="/quien-soy">Quien Soy</a>
+            <a routerLink="/rankings">Rankings</a>
             @if (loggedIn() == false) {
                 <a routerLink="/login">Login</a>
                 <a routerLink="/register">Register</a>
