--- a/src/app/pages/register/register.css
+++ b/src/app/pages/register/register.css
@@ -1,24 +1,55 @@
-form{
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 80vh;
+    height: 100vh;
+    width: 100vw;
+}
+
+form{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     gap: 1vw;
+    width: 40%;
+    background-color: #1F1F1F;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #0000005d;
+    padding: 1vw;
+}
+
+.datos{
+    background-color: black;
+    padding: 1vw;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 5px;
 }
 
 p{
     margin: 0px;
+    width: 100%;
 }
 
 input{
-    width: 30%;
+    width: 100%;
+    height: 2vw;
+    border-radius: 5px;
+    border: none;
+    background-color: #303030;
+    color: white;
 }
 
 button{
-    width: 30%;
+    width: 100%;
     border: none;
-    background-color: rgb(176, 66, 204);
+    background-color: #000000;
     color: white;
     border-radius: 2px;
     height: 2vw;
@@ -26,5 +57,6 @@ button{
 }
 
 h1{
-    color: rgb(71, 71, 71);
+    font-weight: bolder;
+    margin: 1vw;
 }
