--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,16 +1,29 @@
 <app-modal (cambioModal)="cambioModal($event)" [mensaje]="mensaje" [titulo]="titulo" [modalAbierto]="modalAbierto"/>
 
-<form>
-    <h1>Registrarse</h1>
-    <p>Email</p>
-    <input placeholder="Email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"/>
-    <p>Nombre</p>
-    <input placeholder="Nombre" [(ngModel)]="nombre" [ngModelOptions]="{standalone: true}"/>
-    <p>Apellido</p>
-    <input placeholder="Apellido" [(ngModel)]="apellido" [ngModelOptions]="{standalone: true}"/>
-    <p>Edad</p>
-    <input placeholder="Edad" type="number" [(ngModel)]="edad" [ngModelOptions]="{standalone: true}"/>
-    <p>Contraseña</p>
-    <input placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
-    <button (click)="comprobarDatos()">Ingresar</button>
-</form>
+<div class="container">
+
+    <form>
+        <h1>Registrarse</h1>
+        <div class="datos">
+            <p>Email</p>
+            <input placeholder="Email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"/>
+        </div>
+        <div class="datos">
+            <p>Nombre</p>
+            <input placeholder="Nombre" [(ngModel)]="nombre" [ngModelOptions]="{standalone: true}"/>
+        </div>
+        <div class="datos">
+            <p>Apellido</p>
+            <input placeholder="Apellido" [(ngModel)]="apellido" [ngModelOptions]="{standalone: true}"/>
+        </div>
+        <div class="datos">
+            <p>Edad</p>
+            <input placeholder="Edad" type="number" [(ngModel)]="edad" [ngModelOptions]="{standalone: true}"/>
+        </div>
+        <div class="datos">
+            <p>Contraseña</p>
+            <input placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
+        </div>
+        <button (click)="comprobarDatos()">Ingresar</button>
+    </form>
+</div>
