--- a/src/app/pages/bienvenida/bienvenida.css
+++ b/src/app/pages/bienvenida/bienvenida.css
@@ -128,12 +128,19 @@
     justify-content: flex-end; 
     padding: 1vw;
     transition: 0.2s;
+    gap: 0.5vw;
 }
 
 .mensaje{
     display: flex;
     justify-content: space-between;
-    height: 4vh;
+    min-height: 4vh;
+}
+
+.txt{
+    width: 12vw;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 form{
