--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -22,7 +22,7 @@
         </div>
         <div class="datos">
             <p>Contraseña</p>
-            <input placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
+            <input type="password" placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
         </div>
         <button (click)="comprobarDatos()">Ingresar</button>
     </form>
