--- a/src/app/juegos/mayormenor/mayormenor.html
+++ b/src/app/juegos/mayormenor/mayormenor.html
@@ -1,6 +1,7 @@
-<app-volver-boton/>
+
 <app-modal (cambioModal)="cambioModal($event)" [mensaje]="mensaje" [titulo]="titulo" [modalAbierto]="modalAbierto"/>
-<p class="puntos">Puntos: {{puntos}}</p>
+<div class="main-container">
+    <p class="puntos">Puntos: {{puntos}}</p>
 <div class="contenedor">
     <img name="1" src={{imagenCarta1}}/>
     <div class="contenedor-botones">
@@ -9,3 +10,5 @@
     </div>
     <img class="secreto" name="2" src={{imagenCarta2}}/>
 </div>
+</div>
+    
