--- a/src/app/pages/bienvenida/bienvenida.html
+++ b/src/app/pages/bienvenida/bienvenida.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+
 @if(bienvenida == null || bienvenida == "false"){
     <div class="main">
         <h1>Bienvenido</h1>
