--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,5 @@
     --tertiary-color: #2e1152;
 }
 
-body { background-color: #222222 !important; font-size: 1vw; color: white;}
+body { background-color: #222222 !important; font-size: 1vw; color: white; overflow: hidden;}
 
