--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -5,11 +5,11 @@
         <h1>Iniciar Sesion</h1>
         <div class="datos">
             <p>Email</p>
-            <input placeholder="Email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"/>
+            <input required placeholder="Email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"/>
         </div>
         <div class="datos">
             <p>Contraseña</p>
-            <input type="password" placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
+            <input required type="password" placeholder="Contraseña" [(ngModel)]="contrasena" [ngModelOptions]="{standalone: true}"/>
         </div>
 
         <button (click)="comprobarDatos()">Ingresar</button>
